# walter-bot

./: .env  Cargo.toml  README.md
migrations/: 20230315184938_initial_db.sql
src/: config.rs  handler.rs  main.rs  utils.rs
src/commands/: infractions.rs  lls.rs  mod.rs  nuke.rs  parser.rs  role_selection.rs  say.rs  ticket.rs  timeout.rs
src/models/: discord.rs  logs.rs  mod.rs  rights.rs  role_select.rs  ticket.rs
