[package]
name = "walter-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
sys-info = "0.9.1"
chrono = "0.4.24"
async-trait = "0.1.66"
rand = "0.8.5"